--- a/WhatsMyName/app/src/main/res/values/strings.xml
+++ b/WhatsMyName/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WhatsMyName</string>
+    <string name="button_show_name">Show name</string>
+    <string name="text_enter_name">Enter your name</string>
+    <string name="hint_name">Enter your name</string>
 </resources>
