Implementing logic to calculate weight in outhers planets

--- a/YourWeightOn/app/src/main/res/values/strings.xml
+++ b/YourWeightOn/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="mars">Mars</string>
     <string name="venus">Venus</string>
     <string name="jupter">Jupter</string>
+    <string name="type_your_weight_text">Please, type your weight!</string>
 </resources>
