Learning how to pass data between activities

--- a/ShowNextActivity/app/src/main/res/values/strings.xml
+++ b/ShowNextActivity/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">ShowNextActivity</string>
     <string name="go_second_activity_button">Go to second activity</string>
     <string name="second_activity_title">Hi! I\'m the second activity!</string>
+    <string name="type_name_text">Type your name:</string>
+    <string name="name">Name</string>
 </resources>
