Adding recycler view on main activity

--- a/RecyclerViewAppExercise/app/src/main/res/values/strings.xml
+++ b/RecyclerViewAppExercise/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RecyclerViewAppExercise</string>
+    <string name="new_element_button">New Element</string>
 </resources>
