Creating row to Chore List

--- a/ChoreApp/app/src/main/res/values/strings.xml
+++ b/ChoreApp/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="save_chore">Save Chore</string>
     <string name="please_enter_a_chore">Please enter a chore</string>
     <string name="chore_created_successfully">Chore created successfully</string>
+    <string name="image_description">Image of Chore</string>
 </resources>
