--- a/IntroToKotlinFirebase/app/src/main/res/values/strings.xml
+++ b/IntroToKotlinFirebase/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">IntroToKotlinFirebase</string>
+    <string name="type_email_hint">Enter e-mail</string>
+    <string name="password_hint">Password</string>
+    <string name="create_act">Create Account</string>
 </resources>
