--- a/MyChatApp/app/src/main/res/values/strings.xml
+++ b/MyChatApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyChatApp</string>
+    <string name="welcome_text">Welcome to Whatsup clone!</string>
+    <string name="have_account">Already have account</string>
+    <string name="need_account">Need a new Account</string>
 </resources>
