--- a/MyChatApp/app/src/main/res/values/strings.xml
+++ b/MyChatApp/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="welcome_text">Welcome to Whatsup clone!</string>
     <string name="have_account">Already have account</string>
     <string name="need_account">Need a new Account</string>
+    <string name="login_text">Login</string>
 </resources>
