--- a/MyChatApp/app/src/main/res/values/strings.xml
+++ b/MyChatApp/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="have_account">Already have account</string>
     <string name="need_account">Need a new Account</string>
     <string name="login_text">Login</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
