--- a/DevPortfolio/app/src/main/res/values/strings.xml
+++ b/DevPortfolio/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">DevPortfolio</string>
+    <string name="dev_name">Bruno Nogueira</string>
+    <string name="dev_profission">Android Kotlin Developer</string>
+    <string name="get_in_touch">Get in Touch</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
