--- a/MotivationalApp/app/src/main/res/values/strings.xml
+++ b/MotivationalApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">MotivationalApp</string>
     <string name="app_logo">App Logo</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="quote_text">Quote text</string>
 </resources>
